// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > has accent variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-accent"
  >
    accent badge
  </span>
</DocumentFragment>
`;

exports[`Badge > has error variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-error"
  >
    error badge
  </span>
</DocumentFragment>
`;

exports[`Badge > has ghost variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-ghost"
  >
    ghost badge
  </span>
</DocumentFragment>
`;

exports[`Badge > has info variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-info"
  >
    info badge
  </span>
</DocumentFragment>
`;

exports[`Badge > has large (lg) size 1`] = `
<DocumentFragment>
  <span
    class="badge badge-ghost badge-lg"
  >
    large
  </span>
</DocumentFragment>
`;

exports[`Badge > has medium (md) size 1`] = `
<DocumentFragment>
  <span
    class="badge badge-ghost badge-md"
  >
    medium
  </span>
</DocumentFragment>
`;

exports[`Badge > has neutral variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-neutral"
  >
    neutral badge
  </span>
</DocumentFragment>
`;

exports[`Badge > has no outline 1`] = `
<DocumentFragment>
  <span
    class="badge badge-ghost"
  >
    Badge has no outline
  </span>
</DocumentFragment>
`;

exports[`Badge > has outline 1`] = `
<DocumentFragment>
  <span
    class="badge badge-ghost badge-outline"
  >
    Badge has outline
  </span>
</DocumentFragment>
`;

exports[`Badge > has primary variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-primary"
  >
    primary badge
  </span>
</DocumentFragment>
`;

exports[`Badge > has secondary variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-secondary"
  >
    secondary badge
  </span>
</DocumentFragment>
`;

exports[`Badge > has small (sm) size 1`] = `
<DocumentFragment>
  <span
    class="badge badge-ghost badge-sm"
  >
    small
  </span>
</DocumentFragment>
`;

exports[`Badge > has success variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-success"
  >
    success badge
  </span>
</DocumentFragment>
`;

exports[`Badge > has tiny (xs) size 1`] = `
<DocumentFragment>
  <span
    class="badge badge-ghost badge-xs"
  >
    tiny
  </span>
</DocumentFragment>
`;

exports[`Badge > has warning variant 1`] = `
<DocumentFragment>
  <span
    class="badge badge-warning"
  >
    warning badge
  </span>
</DocumentFragment>
`;
